ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-desec
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
  name: jellyfin-temp
  namespace: jellyfin
spec:
  ingressClassName: traefik
  rules:
  - host: jellyfin-temp.bigli.io
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              number: 8096
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - jellyfin-temp.bigli.io
    secretName: ingress-temp-cert
